# ai-kb-quiz

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: main.py
config/: config.example.yaml
docs/specs/: 2026-04-11-ai-kb-quiz-design.md
docs/user-stories/: epic-1-configuration.md  epic-10-e2e-journeys.md  epic-2-kb-retrieval.md  epic-3-ptc.md  epic-4-programmable-tool-calling.md  epic-5-model-router.md  epic-6-quiz-session.md  epic-7-kb-management.md  epic-8-vector-index.md  epic-9-observability.md
engine/: backend_lock.py  chunker.py  context_cache.py  embedder.py  indexer.py  learn.py  manifest.py  ptc.py  question.py  retriever.py  router.py  store.py
engine/models/: adapter.py  gemini_adapter.py  local_adapter.py  premium_adapter.py
engine/ptc_scripts/: extract_code_context.py  extract_concepts.py  summarize_chunk.py
kb/: Advanced-Windows-Debugging-and-System-Reversing-A-Comprehensive-Guide-for-Kernel.md  README.md  WinDbg-Complete-Technical-Reference-StudyNotes.md  Windows-Kernel-Internals-StudyNotes.md  ai-kd.md  edr-architecture-guide.md  edr-critical-thinking.md  edr-design-reference.md  edr-enhancement.md  io-driver-overview.md  kernel-primitives-overview.md  minifilter-driver-reference.md  process-thread-overview.md  windows-debugging.md
kb/anthropic/: anthropic-prompt-caching.md
kb/mitre-threat-intel/: MITRE_INDEX.md  README.md
kb/windows-kernel/: WinDbg-Complete-Technical-Reference.md  Windows-Debugging-and-EDR-Internals-Technical-Reference.md  boot-virtualization-overview.md  (+5 more)
kb_index/: manifest.json
tests/: conftest.py
(+86 files in other folders)
